--- a/res/main.css
+++ b/res/main.css
@@ -64,19 +64,19 @@ html {
 
 /* main body */
 .site {
-  margin: 0 auto 0 auto;
-  width: 980px;
+  /*margin: 0 auto 0 auto;
+  width: 980px;*/
   background: url('foto/home1.jpg') no-repeat center center fixed;
   background-size: cover;
   min-height: 100%;
 }
 
 .outer {
-  width: 96%;
+  width: 100%;
 }
 
 .middle {
-  width: 85%;
+  width: 100%;
 }
 
 .grid {
@@ -403,4 +403,76 @@ html {
 	z-index: 9;
 	position: relative;
 	float: left;
+}
+
+.geoObject {
+	box-shadow: inset 0 0 8px #000;
+	background-color: rgba(255, 255, 255, 0.65);
+	border-color: #333333;
+	border-radius: .3em;
+	border-width: 2px;
+	border-style: solid;
+	display: inline-block;
+	position: relative;
+	z-index: 10;
+	width: 300px;
+}
+
+.geoObject * {
+	color: #F59035;
+	padding: .5em;
+}
+
+.geoobjectType {
+	font-size: 12pt;
+	color: black:
+	font-weight: bolder;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	width: 100%;
+}
+
+.geoIcon {
+	max-width: 3em;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.notSupported {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.notSupported div
+{
+	display: inline-block;
+	background-color: white;
+	border-color: #333333;
+	border-radius: 1em;
+	border-width: 2px;
+	border-style: solid;
+	width: 50%;
+	margin: auto;
+}
+
+.notSupported div span
+{
+	padding: 1.5em;
+}
+
+video
+{
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 5;
 }
