--- a/res/main.css
+++ b/res/main.css
@@ -425,7 +425,7 @@ html {
 
 .geoobjectType {
 	font-size: 12pt;
-	color: black:
+	color: black;
 	font-weight: bolder;
 	display: inline-block;
 	margin: 0;
